[package]
name = "power_flow_data"
version = "0.4.0"
description = "RAW power flow data file parser"
repository = "https://github.com/rwl/power_flow_data"
license = "MIT"
edition = "2021"

[dependencies.power_flow_data_derive]
path = "../power_flow_data_derive"
version = "0.1"

[dependencies]
arrayvec = "0.7"
nom = "7.1"
